--- a/app/assets/stylesheets/artworks.scss
+++ b/app/assets/stylesheets/artworks.scss
@@ -40,7 +40,6 @@ body {
     img {
       max-width: 100%;
       height: 220px;
-      margin-top: 10px;
     }
   }
 
@@ -102,26 +101,12 @@ body {
 }
 
 .artwork-detail {
-  .artwork {
-    display: block;
-    padding: 15px;
-    margin-bottom: 20px;
-    line-height: 1.42857143;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    transition: border .2s ease-in-out;
-    box-sizing: border-box;
-    box-shadow: 0 1px 2px rgba(0,0,0,.075);
-    margin: 0 auto;
-  }
-
   .creator-name {
-    color: #000;
-    font-size: 2.8rem;
-    font-weight: bold;
-    text-align: left;
-    margin-left: 4%;
+  color: #000;
+  font-size: 2.8rem;
+  font-weight: bold;
+  text-align: left;
+  margin-left: 4%;
   }
 
   .caption {
@@ -131,8 +116,8 @@ body {
     text-align: left;
     margin-left: 4%;
     margin-right: 4%;
+    padding: 0px;
   
-
     p {
       word-wrap: break-word;
     }
@@ -176,7 +161,8 @@ body {
 
 .artwork-detail {
   .post {
-    margin: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
   .back-button {
     margin-bottom: 50px;
@@ -200,11 +186,15 @@ body {
     margin-bottom: 40px;
   }
   .back-button{
-    text-align: center
+    text-align: center; 
   }
   a {
     color: #000;
     font-size: 2rem;
+  }
+  .partition {
+    font-size: 2rem;
+    margin: 12px;
   }
 }
  
