作品投稿画面を修正

--- a/app/assets/stylesheets/artworks.scss
+++ b/app/assets/stylesheets/artworks.scss
@@ -182,8 +182,7 @@ body {
   h3 {
     text-align: center;
     font-weight: bold;
-    margin-top: 20px;
-    margin-bottom: 40px;
+    margin: 30px;
   }
   .back-button{
     text-align: center; 
