--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class = "sign-up">
   <div class = "container">
-    <h2>Sign up</h2>
+    <h3>Sign up</h3>
 
     <div class = "form-horizontal sign-up-form" role = "form">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -9,33 +9,33 @@
       </div>
 
         <div class="field form-group">
-          <%= f.label :username, "ユーザーネーム", class: "col-sm-2 col-sm-offset-3 control-label"%>
-          <div class="col-sm-4">
-            <%= f.text_field :username, class: "form-control"%>
+          <%#= f.label :username, "ユーザーネーム", class: "col-sm-2 col-sm-offset-3 control-label"%>
+          <div class="col-sm-4 col-sm-offset-4">
+            <%= f.text_field :username, placeholder: "ユーザーネーム", class: "form-control"%>
           </div>
         </div>
 
         <div class="field form-group">
-          <%= f.label :email, class: "col-sm-2 col-sm-offset-3 control-label"%>
-          <div class="col-sm-4">
-            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+          <%#= f.label :email, class: "col-sm-2 col-sm-offset-3 control-label"%>
+          <div class="col-sm-4 col-sm-offset-4">
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "メールアドレス", class: "form-control" %>
           </div>
         </div>
 
         <div class="field form-group">
-          <%= f.label :password, class: "col-sm-2 col-sm-offset-3 control-label" %>
+          <%#= f.label :password, class: "col-sm-2 col-sm-offset-3 control-label" %>
           <% if @minimum_password_length %>
           <!--<em>(<%= @minimum_password_length %>文字以上)</em>-->
           <% end %>
-          <div class="col-sm-4">
-            <%= f.password_field :password, autocomplete: "new-password", :placeholder => "6文字以上", class: "form-control" %>
+          <div class="col-sm-4 col-sm-offset-4">
+            <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード（6文字以上）", class: "form-control" %>
           </div>
         </div>
 
         <div class="field form-group">
-          <%= f.label :password_confirmation, class: "col-sm-2 col-sm-offset-3 control-label" %>
-          <div class="col-sm-4">
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+          <%#= f.label :password_confirmation, class: "col-sm-2 col-sm-offset-3 control-label" %>
+          <div class="col-sm-4 col-sm-offset-4">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "パスワード（確認用）", class: "form-control" %>
           </div>
         </div>
 
@@ -44,9 +44,9 @@
           <!--userモデルに送るform_forとは別にcreatorに送るフォームを作成。resource(ユーザー)の子creatorを１対多で作成 -->
           <%= f.fields_for :creators, resource.creators.build || Creator.new do |al| %>
             <div class="field form-group">
-              <%= al.label :creator, "クリエイター", class: "col-sm-2 col-sm-offset-3 control-label" %>
-              <div class="col-sm-4">
-                <%= al.text_field :name, class: "form-control" %>
+              <%#= al.label :creator, "クリエイター", class: "col-sm-2 col-sm-offset-3 control-label" %>
+              <div class="col-sm-4 col-sm-offset-4">
+                <%= al.text_field :name, placeholder: "クリエイター（作品を作った人）", class: "form-control" %>
               </div>
             </div>
           <% end %>
