--- a/app/assets/stylesheets/folders.scss
+++ b/app/assets/stylesheets/folders.scss
@@ -39,6 +39,11 @@
 }
 
 .edit-folder {
+  h3 {
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 30px;
+  }
   .back-button{
     text-align: center
   }
@@ -47,7 +52,7 @@
     font-size: 2rem;
   }
   .folder-form {
-    margin: 40px;
+    margin: 30px;
   }
   .folder-name {
     margin-bottom: 10px;
@@ -60,4 +65,3 @@
     margin-bottom: 10px;
   }
 }
-
