--- a/app/views/folders/edit.html.erb
+++ b/app/views/folders/edit.html.erb
@@ -1,12 +1,11 @@
-<h2>folder編集</h2>
-
-<div class = "edit-folder">
-  <div class="container">
-
+<div class="container">
+  <div class = "edit-folder">
+    <h3>フォルダ編集</h3>
     <div class = "folder-form">
       <div class="form-horizontal" role="form">
 
         <%= form_with(model: @folder, local: true) do |form| %>
+        <div class = "col-xs-12 col-sm-6 col-sm-offset-3">
           <% if @folder.errors.any? %>
             <div id="error_explanation">
               <h2><%= @folder.errors.count %> 件のエラーがあります。</h2>
@@ -18,6 +17,7 @@
               </ul>
             </div>
           <% end %>
+        </div>
 
           <div class = "form-group" >
             <div class = "col-sm-offset-4 col-sm-4">
