--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -1,7 +1,16 @@
-.sign-up {
+.sign-up, .user-edit {
   h3 {
     text-align: center;
     font-weight: bold;
     margin-bottom: 30px;
+  }
+}
+
+.user-edit {
+  .delete-message {
+    margin-top: 50px;
+  }
+  p {
+    color: #FF0066;
   }
 }
