--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
                       </ul>
                     </li>
 
-                    <li><%= link_to "マイページ", "# "%>
+                    <li><%= link_to "マイページ", "/users/edit"%>
                     </li>
 
                     <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
