作品の公開設定の初期状態の修正、バリデーションの設定

--- a/app/views/artworks/_form.html.erb
+++ b/app/views/artworks/_form.html.erb
@@ -61,7 +61,7 @@
           </div>
           <div class="radio-inline">
             <%# :checked => true によってデフォルトでチェックを付けた状態にする %>
-            <label><%= form.radio_button :is_published, false, :checked => true %>公開しない</label>
+            <label><%= form.radio_button :is_published, false %>公開しない</label>
           </div>
         </div>
       </div>
