--- a/app/views/artworks/creator_index.html.erb
+++ b/app/views/artworks/creator_index.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
 
     <!--<h3> 全ての作品 </h3>-->
-    <h3><%= @creator.name %> の作品</h3>
+    <h3 class = "page-title"><%= @creator.name %> の作品</h3>
 
     <div class = "row">
       <div class="col-xs-12 col-sm-3 col-md-2">
