--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -1,7 +1,7 @@
 <div class = "artworks-index">
   <div class = "container">
 
-    <h3>みんなの作品</h3>
+    <h3 class = "page-title">みんなの作品</h3>
 
     <div class= "row">
       <% @artworks.each do |artwork| %>
