--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <div class = "user-edit">
   <div class = "container">
     <!--<h3>Edit <%= resource_name.to_s.humanize %></h3>-->
-    <h3>アカウント情報編集</h3>
+    <h3 class = "page-title">アカウント情報編集</h3>
 
     <div class = "form-horizontal sign-up-form" role = "form">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
