--- a/app/views/artworks/edit.html.erb
+++ b/app/views/artworks/edit.html.erb
@@ -1,7 +1,7 @@
 <div class = "edit-artwork">
   <div class="container">
 
-    <h3><i class="far fa-edit"></i> 編集する</h3>
+    <h3 class = "page-title"><i class="far fa-edit"></i> 編集する</h3>
 
     <%= render 'form', artwork: @artwork %>
 
