--- a/app/views/artworks/new.html.erb
+++ b/app/views/artworks/new.html.erb
@@ -1,7 +1,7 @@
 <div class = "new-artwork">
   <div class = "container">
   
-    <h3><i class="far fa-images"></i> 投稿する</h3>
+    <h3 class = "page-title"><i class="far fa-images"></i> 投稿する</h3>
 
     <%= render 'form', artwork: @artwork %>
 
