--- a/app/views/creators/_form.html.erb
+++ b/app/views/creators/_form.html.erb
@@ -4,8 +4,8 @@
     <%= form_with(model: creator, local: true) do |form| %>
 
       <% if creator.errors.any? %>
-        <div id="error_explanation" class="col-sm-offset-2 col-sm-10">
-          <h2><%= creator.errors.count %>件のエラーがあります。</h2>
+        <div id="error_explanation" class="error-message col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+          <h3 div class = "page-title"><%= creator.errors.count %>件のエラーがあります。</h3>
           <ul>
             <% creator.errors.full_messages.each do |msg| %>
               <li><%= msg %></li>
