--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class = "sign-up">
   <div class = "container">
-    <h3>Sign up</h3>
+    <h3 class = "page-title">Sign up</h3>
 
     <div class = "form-horizontal sign-up-form" role = "form">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
