作品の制作年月日の表示の修正とバリデーションの設定

--- a/app/assets/stylesheets/artworks.scss
+++ b/app/assets/stylesheets/artworks.scss
@@ -172,14 +172,18 @@ body {
   textarea {
     resize: none;
   }
+  .created_date {
+    display: inline-block;
+    width: auto;
+  }
 }
 
 .new-artwork, .edit-artwork, .artwork-detail {
-    .page-title {
-        text-align: center;
-        font-weight: bold;
-        margin: 30px;
-    }
+  .page-title {
+      text-align: center;
+      font-weight: bold;
+      margin: 30px;
+  }
   .back-button{
     text-align: center; 
     margin: 50px;
