--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,19 +1,21 @@
 <div class = "folder-index">
   <div class = "container">
-    <h3>フォルダ一覧</h3>
+
+    <h3 class = "page-title"><%= @creator.name %>のフォルダ</h3>
     
     <div class = "folder">
       <% @folders.each do |folder| %>
-
-        <!-- folder を作成↓した user のidと current_user (ログイン中のuserのid)が同じ場合 -->
+        <!-- folder を作成した user のidと current_user (ログイン中のuserのid)が同じ場合 -->
         <% if folder.creator.user_id == current_user.id %>
 
           <div class = "row">
             <div class = "folder-name col-xs-6 col-xs-offset-1 col-sm-3 col-sm-offset-4">
-              <p><%= folder.folder_name %></p>
+              <%= link_to artworks_path(folder_id: folder.id) do %>
+                <p><%= folder.folder_name %></p>
+              <% end %>
             </div>
-            <div class="buttons col-xs-4 col-sm-3">
 
+            <div class="buttons col-xs-4 col-sm-3">
               <%# 編集ボタンの表示 %>
               <div class="edit_button">
                 <%= link_to edit_folder_path(folder.id, creator_id: folder.creator_id) do %>
