作品詳細画面の「作った時期の」表示を年と月のみに修正

--- a/app/views/artworks/show.html.erb
+++ b/app/views/artworks/show.html.erb
@@ -16,8 +16,10 @@
               <%= @artwork.caption %>
             </p>
             <p class = "created-date">
-              <span>作った時期 < <%= @artwork.created_date %>></span>
+              <!-- .strftime("%Y-%m") によって年と月のみの表示にする-->
+              <span>作った時期 < <%= @artwork.created_date.strftime("%Y-%m") %>></span>
             </p>
+
             <p class = "date">
               <%= @artwork.created_at.strftime("%Y-%m-%d %H:%M ") %>
             </p>
