ヘッダーのリンク表示を「マイページ」から「アカウント編集」に変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
                       </ul>
                     </li>
 
-                    <li><%= link_to "マイページ", "/users/edit"%>
+                    <li><%= link_to "アカウント編集", "/users/edit"%>
                     </li>
 
                     <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
