--- a/app/views/artworks/show.html.erb
+++ b/app/views/artworks/show.html.erb
@@ -20,6 +20,14 @@
               <span>作った時期 < <%= @artwork.created_date.strftime("%Y-%m") %>></span>
             </p>
 
+            <p class = "is-published">
+              <% if @artwork.is_published %>
+                <span>公開設定 < 公開する ></span>
+              <% else %>
+                <span>公開設定 < 公開しない ></span>
+              <% end %>
+            </p>
+
             <p class = "date">
               <%= @artwork.created_at.strftime("%Y-%m-%d %H:%M ") %>
             </p>
