--- a/app/assets/stylesheets/artworks.scss
+++ b/app/assets/stylesheets/artworks.scss
@@ -120,7 +120,7 @@ body {
     }
   }
 
-  .created-date {
+  .created-date, .is-published {
     color: #000;
     font-size: 1.8rem;
     text-align: left;
