--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,29 @@
-<h2>Resend confirmation instructions</h2>
+ <div class = "confirmations">
+  <div class = "container">
+    <h4 class = "message ">アカウント有効化の為の確認メールを再送信します。</h4>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="form-horizontal" role="form">
+      <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+        <div class="field form-group">
+          <div class = "col-sm-offset-4 col-sm-4">
+            <%#= f.label :email, class: "control-label" %>
+            <%= f.email_field :email, placeholder: "メールアドレス", autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="actions, form-group">
+          <div class = "col-sm-offset-4 col-sm-4">
+            <%= f.submit "送信", class: "btn btn-default" %>
+          </div>
+        </div>
+      <% end %>
+    <div>
+
+    <div class = "links col-sm-offset-4 col-sm-4">
+      <p><%= render "devise/shared/links" %></p>
+    </div>
+
   </div>
-
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
