サインアップ画面を修正

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -56,10 +56,11 @@
             <%= f.submit "新規登録", class: "btn btn-default col-xs-4 col-xs-offset-4 col-sm-2 col-sm-offset-5" %>
         </div>
       <% end %>
-
     </div>
 
-    <%#= render "devise/shared/links" %>
+    <div class = "links col-sm-offset-4 col-sm-4">
+      <%= render "devise/shared/links" %>
+    </div>
 
   </div>
 </div>
