devise のパスワード再設定機能を実装

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,7 +1,9 @@
-<p><%= @email %>様、この度は「さくひんBOX」にご登録頂きありがとうございます。</P>
+<p><%= @email %> 様、この度は「さくひんBOX」にご登録頂きありがとうございます。</P>
 
 <p>アカウントの登録を完了させるには、以下のリンクをクリックしてください。</p>
 
 <p><%= link_to 'アカウントを有効にする', confirmation_url(@resource, confirmation_token: @token) %></p>
 
-<p>このメールにお心当たりのない場合は、お手数ですがメールを破棄していただきますようお願い申し上げます。<p>
+<p>このメールにお心当たりのない場合は、お手数ですがメールを破棄していただきますようお願い致します。<p>
+
+<p>このメールは自動配信の為、返信には対応しておりません。あらかじめご了承ください。</p>
