--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,13 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>このメールは「さくひんBOX」より、 <%= @resource.email %> 様宛にお送りしております。</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>パスワード再設定のリクエストがありました。</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>パスワードの再設定を行う場合は下記のリンクからお願いします。</p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p><%= link_to 'パスワード再設定', edit_password_url(@resource, reset_password_token: @token) %></p>
+
+<p>上記のリンクにアクセスして新しいパスワードを作成するまで、パスワードは変更されません。</p>
+
+<p>このメールにお心当たりのない方は、お手数ですがメールを破棄していただきますようお願い致します。</p>
+
+<p>このメールは自動配信の為、返信には対応しておりません。あらかじめご了承ください。</p>
