--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,40 @@
-<h2>Change your password</h2>
+<div class = "reset-password">
+  <div class = "container">
+    <h4 class = "message">パスワードを再設定します。</h4>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+    <div class="form-horizontal" role="form">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+        <div class="field form-group">
+          <div class = "col-sm-offset-4 col-sm-4">
+            <!--<%= f.label :password, "New password" %><br />-->
+            <!--<% if @minimum_password_length %>-->
+              <!--<em>(<%= @minimum_password_length %> characters minimum)</em><br />-->
+            <!--<% end %>-->
+            <%= f.password_field :password, placeholder: "新しいパスワード (6文字以上)", autofocus: true, autocomplete: "new-password", class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="field form-group">
+          <!--<%= f.label :password_confirmation, "Confirm new password" %><br />-->
+          <div class = "col-sm-offset-4 col-sm-4">
+            <%= f.password_field :password_confirmation, placeholder: "新しいパスワード (確認用)", autocomplete: "off", class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="actions form-group">
+          <div class = "col-sm-offset-4 col-sm-4">
+            <%= f.submit "更新", class: "btn btn-default" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+
+    <div class = "links col-sm-offset-4 col-sm-4">
+      <%= render "devise/shared/links" %>
+    </div>
+
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
