--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,28 @@
-<h2>Forgot your password?</h2>
+<div class = "forget-password">
+  <div class = "container">
+    <h4 class = "message">パスワードを再設定する為のメールを送信します。</h4>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="form-horizontal" role="form">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="field form-group">
+          <div class = "col-sm-offset-4 col-sm-4">
+            <%#= f.label :email %>
+            <%= f.email_field :email, placeholder: "メールアドレス", autofocus: true, autocomplete: "email", class: "form-control" %>
+          </div>
+        </div>
+
+        <div class="actions form-group">
+          <div class = "col-sm-offset-4 col-sm-4">
+            <%= f.submit "送信", class: "btn btn-default" %>
+          </div>
+        </div>
+      <% end %>
+
+      <div class = "links col-sm-offset-4 col-sm-4">
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
