--- a/app/views/artworks/_form.html.erb
+++ b/app/views/artworks/_form.html.erb
@@ -3,12 +3,21 @@
   <div class="form-horizontal" role="form">
     <%= form_with(model: artwork, local: true) do |form| %>
 
-      <% if artwork.errors.any? %>
+      <% if artwork.errors.any? || (@folder.present? && @folder.errors.any?) %>
         <div id="error_explanation" class="error-message col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-          <h3><%= artwork.errors.count %>件のエラーがあります。</h3>
+          <% if @folder.present? %>
+            <h3><%= artwork.errors.count + @folder.errors.count %>件のエラーがあります。</h3>
+          <% else %>
+            <h3><%= artwork.errors.count%>件のエラーがあります。</h3>
+          <% end %>
           <ul>
           <% artwork.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
+          <% end %>
+          <% if @folder.present? %>
+            <% @folder.errors.full_messages.each do |msg|%>
+              <li><%= msg %></li>
+            <% end %>
           <% end %>
           </ul>
         </div>
