--- a/app/views/artworks/new.html.erb
+++ b/app/views/artworks/new.html.erb
@@ -3,7 +3,7 @@
   
     <h3 class = "page-title"><i class="far fa-images"></i> 投稿する</h3>
 
-    <%= render 'form', artwork: @artwork %>
+    <%= render 'form', artwork: @artwork, folder: @folder %>
 
     <div class = "back-button">
       <%= link_to 'Back', artworks_path %>
